# Agentic_AI_Bootcamp

./: 1-agent.ipynb  2-modelIntegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structruedOutput.ipynb  6-middleware.ipynb  7-humanLoop.ipynb  main.py  pyproject.toml  requirements.txt
